--- a/i18n/ge.json
+++ b/i18n/ge.json
@@ -38,6 +38,48 @@
       "readFullStory": "წაიკითხე სრული ამბავი",
       "news": [
         {
+          "tag": "ტექნოლოგია",
+          "tagColor": "yellow",
+          "title": "KIU-ს მაგისტრანტები შანხაის გლობალურ ტექნოლოგიურ ცენტრში სტუმრობენ",
+          "description": "FIM სტუდენტები უახლეს AI პროცესებსა და საერთაშორისო თანამშრომლობას ეცნობიან ჩინეთში.",
+          "link": "წაიკითხეთ მეტი >"
+        },
+        {
+          "tag": "კვლევა",
+          "tagColor": "blue",
+          "title": "საერთაშორისო საზაფხულო სკოლა AI-ზე KIU-ში",
+          "description": "ხუთდღიანი პროგრამა სიმბოლურ და სტატისტიკურ მეთოდებზე მსოფლიო მონაწილეებს აერთიანებს.",
+          "link": "წაიკითხეთ მეტი >"
+        },
+        {
+          "tag": "კამპუსი",
+          "tagColor": "yellow",
+          "title": "სამომავლო სტუდენტების კამპუსის ტური",
+          "description": "KIU აბიტურიენტებს უმასპინძლებს და აჩვენებს ობიექტებსა და პროგრამებს.",
+          "link": "წაიკითხეთ მეტი >"
+        },
+        {
+          "tag": "პარტნიორობა",
+          "tagColor": "blue",
+          "title": "KIU და ჭიათურის ცენტრი პარტნიორობას აფართოებენ",
+          "description": "ერთობლივი მათემატიკის პროგრამა და AI განათლება აძლიერებს რეგიონულ თანამშრომლობას.",
+          "link": "წაიკითხეთ მეტი >"
+        },
+        {
+          "tag": "ტექნოლოგია",
+          "tagColor": "yellow",
+          "title": "FIM სტუდენტები მდგრადი AI-ის კურსს გადიან",
+          "description": "KIU-ს სტუდენტები მონაწილეობენ მდგრადი ხელოვნური ინტელექტის სკოლაში შანხაიში.",
+          "link": "წაიკითხეთ მეტი >"
+        },
+        {
+          "tag": "ლექცია",
+          "tagColor": "blue",
+          "title": "კომუნიკაციების ომბუდსმენის საჯარო ლექცია",
+          "description": "\"იცოდე შენი უფლებები კომუნიკაციების სფეროში\" ლექცია KIU-ში გაიმართა.",
+          "link": "წაიკითხეთ მეტი >"
+        },
+        {
           "tag": "მიღება",
           "tagColor": "yellow",
           "title": "2025 წლის განაცხადები ღიაა",
@@ -47,22 +89,8 @@
         {
           "tag": "კვლევა",
           "tagColor": "blue",
-          "title": "ახალი კვლევითი ცენტრი იხსნება",
-          "description": "თანამედროვე ობიექტები განვითარებული კვლევისა და ინოვაციებისთვის.",
-          "link": "წაიკითხეთ მეტი >"
-        },
-        {
-          "tag": "კამპუსის ცხოვრება",
-          "tagColor": "blue",
-          "title": "სტუდენტური აქტივობების კვირა",
-          "description": "აღმოაჩინეთ კლუბები და ორგანიზაციები ჩვენს ცხოველ კამპუსზე.",
-          "link": "წაიკითხეთ მეტი >"
-        },
-        {
-          "tag": "პარტნიორობა",
-          "tagColor": "yellow",
-          "title": "TUM-თან თანამშრომლობა",
-          "description": "ახალი ერთობლივი პროგრამები მიუნხენის უნივერსიტეტთან.",
+          "title": "საერთაშორისო მათემატიკის კონფერენცია",
+          "description": "საქართველოს პირველი კონფერენცია ფუნქციებზე, მოდელებსა და სისტემებზე აერთიანებს გლობალურ მკვლევრებს.",
           "link": "წაიკითხეთ მეტი >"
         }
       ]
@@ -160,6 +188,132 @@
           "description": "შეისწავლეთ ჩვენი თანამედროვე კვლევითი ობიექტები და ინოვაციური პროექტები."
         }
       ]
+    }
+  },
+  "programs": {
+    "hero": {
+      "title": "სკოლები ქუთაისის საერთაშორისო უნივერსიტეტში",
+      "subtitle": "აღმოაჩინეთ ჩვენი მრავალფეროვანი აკადემიური სკოლები, თითოეული მიძღვნილია სრულყოფილებას განათლებაში, კვლევასა და ინოვაციებში.",
+      "exploreButton": "ყველა სკოლის მონახულება",
+      "virtualTourButton": "ვირტუალური კამპუსის ტური"
+    },
+    "globalNetwork": {
+      "title": "გლობალური აკადემიური ქსელი",
+      "subtitle": "ჩვენი სკოლები ინარჩუნებენ პარტნიორობას წამყვან უნივერსიტეტებთან მსოფლიოს მასშტაბით",
+      "partnerTitle": "პარტნიორი უნივერსიტეტები"
+    },
+    "choosePath": {
+      "title": "აირჩიეთ თქვენი აკადემიური გზა",
+      "subtitle": "თითოეული სკოლა გთავაზობთ უნიკალურ შესაძლებლობებს ზრდისთვის, აღმოჩენისა და პროფესიული განვითარებისთვის."
+    },
+    "alumniStories": {
+      "title": "კურსდამთავრებულთა წარმატების ამბები",
+      "subtitle": "ჩვენი კურსდამთავრებულები იქმნიან გავლენას მთელ მსოფლიოში"
+    },
+    "explorePrograms": "პროგრამების მონახულება",
+    "applyNow": "განაცხადე ახლავე",
+    "students": "სტუდენტი",
+    "programs": "პროგრამა",
+    "close": "დახურვა",
+    "learnMore": "გაიგე მეტი"
+  },
+  "computerScience": {
+    "breadcrumb": {
+      "home": "მთავარი",
+      "schools": "სკოლები",
+      "computerScience": "კომპიუტერული მეცნიერებები"
+    },
+    "hero": {
+      "title": "კომპიუტერული მეცნიერებების სკოლა",
+      "tagline": "ხვალინდელი ციფრული სამყაროს ინოვაცია",
+      "description": "ტექნოლოგიების მომავლის ლიდერობა მოწინავე განათლების, გარღვევითი კვლევისა და ინდუსტრიული პარტნიორობების მეშვეობით.",
+      "stats": {
+        "students": "სტუდენტი",
+        "programs": "პროგრამა",
+        "partners": "პარტნიორი",
+        "researchCenters": "კვლევითი ცენტრი"
+      },
+      "applyButton": "განაცხადე ახლავე",
+      "scheduleVisitButton": "დაჯავშნე ვიზიტი"
+    },
+    "tabs": {
+      "overview": "მიმოხილვა",
+      "programs": "პროგრამები",
+      "faculty": "ფაკულტეტი",
+      "facilities": "ობიექტები",
+      "research": "კვლევა",
+      "admissions": "მიღება"
+    },
+    "overview": {
+      "aboutTitle": "ჩვენი სკოლის შესახებ",
+      "aboutP1": "კომპიუტერული მეცნიერებების სკოლა ქუთაისის საერთაშორისო უნივერსიტეტში დგას ტექნოლოგიური ინოვაციისა და განათლების წინა პლანზე. ჩვენი ყოვლისმომცველი პროგრამები აერთიანებს თეორიულ საფუძვლებს პრაქტიკულ გამოყენებებთან, ამზადებს სტუდენტებს წარმატებული კარიერისთვის სწრაფად განვითარებად ტექნოლოგიურ ინდუსტრიაში.",
+      "aboutP2": "თანამედროვე ობიექტებით, მსოფლიო დონის ფაკულტეტითა და ძლიერი ინდუსტრიული პარტნიორობებით, ჩვენ ვქმნით გარემოს, სადაც სტუდენტებს შეუძლიათ შეისწავლონ მოწინავე ტექნოლოგიები, მათ შორის ხელოვნური ინტელექტი, მანქანური სწავლება, კიბერუსაფრთხოება და პროგრამული ინჟინერია.",
+      "aboutP3": "ჩვენი კურსდამთავრებულები მაღალი მოთხოვნადობით სარგებლობენ წამყვან ტექნოლოგიურ კომპანიებში მთელ მსოფლიოში, 95%-იანი დასაქმების მაჩვენებლით დამთავრებიდან ექვსი თვის განმავლობაში.",
+      "quickFacts": "სწრაფი ფაქტები",
+      "founded": "დაარსდა",
+      "faculty": "ფაკულტეტი",
+      "employmentRate": "დასაქმების მაჩვენებელი",
+      "averageSalary": "საშუალო ხელფასი",
+      "accreditations": "აკრედიტაციები",
+      "testimonials": "რას ამბობენ ჩვენი სტუდენტები"
+    },
+    "programsTab": {
+      "title": "ჩვენი პროგრამები",
+      "subtitle": "აირჩიეთ ჩვენი ყოვლისმომცველი ბაკალავრისა და მაგისტრატურის პროგრამებიდან, რომლებიც შექმნილია ინდუსტრიის მოთხოვნების დასაკმაყოფილებლად.",
+      "undergraduate": "ბაკალავრის პროგრამები",
+      "graduate": "მაგისტრატურის პროგრამები",
+      "duration": "წელი",
+      "credits": "კრედიტი",
+      "research": "კვლევა"
+    },
+    "facultyTab": {
+      "title": "ჩვენი ფაკულტეტი",
+      "subtitle": "ისწავლეთ მსოფლიოში აღიარებული ექსპერტებისა და მკვლევარებისგან, რომლებიც აყალიბებენ ტექნოლოგიების მომავალს."
+    },
+    "facilitiesTab": {
+      "title": "თანამედროვე ობიექტები",
+      "subtitle": "ჩვენი თანამედროვე ობიექტები უზრუნველყოფს სრულყოფილ გარემოს სწავლებისთვის, კვლევისა და ინოვაციებისთვის."
+    },
+    "researchTab": {
+      "title": "კვლევითი სრულყოფილება",
+      "subtitle": "ჩვენი ფაკულტეტი და სტუდენტები დგანან გარღვევითი კვლევის წინა პლანზე კომპიუტერულ მეცნიერებებსა და ტექნოლოგიებში.",
+      "researchCenters": "კვლევითი ცენტრები",
+      "annualFunding": "წლიური კვლევითი დაფინანსება",
+      "publishedPapers": "გამოქვეყნებული სტატიები",
+      "activeProjects": "აქტიური პროექტები",
+      "industryPartners": "ინდუსტრიული პარტნიორები",
+      "recentPublications": "ბოლო პუბლიკაციები"
+    },
+    "admissionsTab": {
+      "title": "მიღების ინფორმაცია",
+      "subtitle": "შეუერთდით ინოვატორებისა და მომავალი ტექნოლოგიური ლიდერების ჩვენს საზოგადოებას. გაეცანით მიღების მოთხოვნებსა და განაცხადის პროცესს.",
+      "undergrad": "ბაკალავრის მიღება",
+      "graduate": "მაგისტრატურის მიღება",
+      "requirements": "მოთხოვნები",
+      "importantDates": "მნიშვნელოვანი თარიღები",
+      "tuitionFees": "სწავლის საფასური",
+      "perYear": "სასწავლო წელიწადში",
+      "applicationDeadlines": "განაცხადის ვადები",
+      "financialAid": "ფინანსური დახმარება და სტიპენდიები",
+      "meritScholarships": "წარმატების სტიპენდიები",
+      "meritDesc": "15,000 აშშ დოლარამდე წელიწადში გამორჩეული აკადემიური მიღწევებისთვის",
+      "needBasedAid": "საჭიროებაზე დაფუძნებული დახმარება",
+      "needDesc": "ფინანსური დახმარება დადასტურებული საჭიროებისა და ოჯახური შემოსავლის საფუძველზე",
+      "researchAssistantships": "კვლევითი ასისტენტობა",
+      "researchDesc": "მაგისტრანტებს შეუძლიათ მიიღონ დაფინანსება კვლევითი პოზიციების მეშვეობით"
+    },
+    "cta": {
+      "title": "მზად ხართ ჩამოაყალიბოთ ტექნოლოგიების მომავალი?",
+      "subtitle": "შეუერთდით ინოვატორების, მკვლევარებისა და მომავალი ტექნოლოგიური ლიდერების ჩვენს საზოგადოებას. დაიწყეთ თქვენი მოგზაურობა დღესვე.",
+      "applyButton": "განაცხადე ახლავე",
+      "scheduleButton": "დაჯავშნე კამპუსის ვიზიტი",
+      "downloadButton": "ჩამოტვირთე ბროშურა"
+    },
+    "footer": {
+      "description": "ინოვაციის ლიდერობა ტექნოლოგიური განათლებისა და კვლევის სფეროში.",
+      "quickLinks": "სწრაფი ბმულები",
+      "contact": "კონტაქტი",
+      "copyright": "ქუთაისის საერთაშორისო უნივერსიტეტი - კომპიუტერული მეცნიერებების სკოლა. ყველა უფლება დაცულია."
     }
   },
   "research": {
