--- a/i18n/ge.json
+++ b/i18n/ge.json
@@ -42,56 +42,56 @@
           "tagColor": "yellow",
           "title": "KIU-ს მაგისტრანტები შანხაის გლობალურ ტექნოლოგიურ ცენტრში სტუმრობენ",
           "description": "FIM სტუდენტები უახლეს AI პროცესებსა და საერთაშორისო თანამშრომლობას ეცნობიან ჩინეთში.",
-          "link": "წაიკითხეთ მეტი >"
+          "link": "წაიკითხეთ მეტი"
         },
         {
           "tag": "კვლევა",
           "tagColor": "blue",
           "title": "საერთაშორისო საზაფხულო სკოლა AI-ზე KIU-ში",
           "description": "ხუთდღიანი პროგრამა სიმბოლურ და სტატისტიკურ მეთოდებზე მსოფლიო მონაწილეებს აერთიანებს.",
-          "link": "წაიკითხეთ მეტი >"
+          "link": "წაიკითხეთ მეტი"
         },
         {
           "tag": "კამპუსი",
           "tagColor": "yellow",
           "title": "სამომავლო სტუდენტების კამპუსის ტური",
           "description": "KIU აბიტურიენტებს უმასპინძლებს და აჩვენებს ობიექტებსა და პროგრამებს.",
-          "link": "წაიკითხეთ მეტი >"
+          "link": "წაიკითხეთ მეტი"
         },
         {
           "tag": "პარტნიორობა",
           "tagColor": "blue",
           "title": "KIU და ჭიათურის ცენტრი პარტნიორობას აფართოებენ",
           "description": "ერთობლივი მათემატიკის პროგრამა და AI განათლება აძლიერებს რეგიონულ თანამშრომლობას.",
-          "link": "წაიკითხეთ მეტი >"
+          "link": "წაიკითხეთ მეტი"
         },
         {
           "tag": "ტექნოლოგია",
           "tagColor": "yellow",
           "title": "FIM სტუდენტები მდგრადი AI-ის კურსს გადიან",
           "description": "KIU-ს სტუდენტები მონაწილეობენ მდგრადი ხელოვნური ინტელექტის სკოლაში შანხაიში.",
-          "link": "წაიკითხეთ მეტი >"
+          "link": "წაიკითხეთ მეტი"
         },
         {
           "tag": "ლექცია",
           "tagColor": "blue",
           "title": "კომუნიკაციების ომბუდსმენის საჯარო ლექცია",
           "description": "\"იცოდე შენი უფლებები კომუნიკაციების სფეროში\" ლექცია KIU-ში გაიმართა.",
-          "link": "წაიკითხეთ მეტი >"
+          "link": "წაიკითხეთ მეტი"
         },
         {
           "tag": "მიღება",
           "tagColor": "yellow",
           "title": "2025 წლის განაცხადები ღიაა",
           "description": "შეუერთდით ლიდერების შემდეგ თაობას KIU-ში ჩვენი ყოვლისმომცველი პროგრამებით.",
-          "link": "წაიკითხეთ მეტი >"
+          "link": "წაიკითხეთ მეტი"
         },
         {
           "tag": "კვლევა",
           "tagColor": "blue",
           "title": "საერთაშორისო მათემატიკის კონფერენცია",
           "description": "საქართველოს პირველი კონფერენცია ფუნქციებზე, მოდელებსა და სისტემებზე აერთიანებს გლობალურ მკვლევრებს.",
-          "link": "წაიკითხეთ მეტი >"
+          "link": "წაიკითხეთ მეტი"
         }
       ]
     },
@@ -424,6 +424,94 @@
       },
       "conferenceTitle": "ყოველწლიური კვლევითი კონფერენცია",
       "conferenceDescription": "შეუერთდით წამყვან მკვლევარებსა და აკადემიკოსებს მთელი მსოფლიოდან ჩვენს პრესტიჟულ ყოველწლიურ კონფერენციაზე"
+    }
+  },
+  "projects": {
+    "hero": {
+      "title": "ჩვენი პროექტები",
+      "description": "აღმოაჩინეთ ინოვაციური ინიციატივები და აკადემიური კონფერენციები, რომლებიც აწინაურებენ განათლებას და კვლევას ქუთაისის საერთაშორისო უნივერსიტეტში"
+    },
+    "currentProjects": "მიმდინარე პროექტები",
+    "labels": {
+      "conferenceDates": "კონფერენციის თარიღები",
+      "keyFeatures": "ძირითადი მახასიათებლები",
+      "registrationFees": "რეგისტრაციის საფასური",
+      "regular": "რეგულარული:",
+      "students": "სტუდენტები:",
+      "submitAbstracts": "წარადგინეთ თეზისები:",
+      "scientificCommittee": "სამეცნიერო კომიტეტი",
+      "plenarySpeakers": "პლენარული მომხსენებლები"
+    }
+  },
+  "students": {
+    "hero": {
+      "title": "სტუდენტური ინფორმაციის ცენტრი",
+      "description": "თქვენი ყოვლისმომცველი გზამკვლევი KIU სტუდენტური სერვისებისა და რესურსების შესახებ"
+    },
+    "services": {
+      "academicCalendar": {
+        "title": "აკადემიური კალენდარი",
+        "description": "მნიშვნელოვანი თარიღები, სემესტრის განრიგები და აკადემიური ვადები მიმდინარე წლისთვის.",
+        "button": "კალენდრის ნახვა"
+      },
+      "legalDirectory": {
+        "title": "იურიდიული სახელმძღვანელო",
+        "description": "უნივერსიტეტის რეგულაციები, პოლიტიკა და იურიდიული დოკუმენტები სტუდენტებისთვის.",
+        "button": "სახელმძღვანელოს წვდომა"
+      },
+      "academicMobility": {
+        "title": "აკადემიური მობილობა",
+        "description": "გაცვლითი პროგრამები და მობილობის შესაძლებლობები KIU სტუდენტებისთვის.",
+        "button": "გაიგე მეტი",
+        "external": "გარე მობილობა",
+        "internal": "შიდა მობილობა"
+      },
+      "tuitionFee": {
+        "title": "სწავლის საფასური",
+        "description": "საფასურის სტრუქტურა, გადახდის გრაფიკები და ფინანსური ინფორმაცია.",
+        "button": "საფასურის ნახვა"
+      },
+      "library": {
+        "title": "ბიბლიოთეკა",
+        "description": "ციფრული რესურსები, კატალოგის ძებნა და ბიბლიოთეკის სერვისები სტუდენტებისთვის.",
+        "button": "ბიბლიოთეკაში შესვლა"
+      },
+      "studentGrant": {
+        "title": "სტუდენტური გრანტის პროგრამა",
+        "description": "დაფინანსების შესაძლებლობები სტუდენტური პროექტებისა და აქტივობებისთვის.",
+        "button": "განაცხადე ახლავე",
+        "current": "მიმდინარე გრანტის კონკურსი",
+        "financed": "დაფინანსებული პროექტები"
+      }
+    }
+  },
+  "vacancies": {
+    "hero": {
+      "title": "ვაკანსიები",
+      "description": "შეუერთდით ჩვენს აკადემიურ საზოგადოებას ქუთაისის საერთაშორისო უნივერსიტეტში"
+    },
+    "sections": {
+      "currentVacancy": "მიმდინარე ვაკანსია",
+      "closedVacancies": "დახურული ვაკანსიები KIU-ში"
+    },
+    "emptyVacancies": {
+      "title": "მიმდინარე ვაკანსიები არ არის",
+      "description": "ამჟამად ღია პოზიციები არ არის. გთხოვთ შეამოწმოთ მოგვიანებით ან წარადგინოთ დაინტერესების გამოხატვა ზემოთ."
+    },
+    "expressionOfInterest": {
+      "title": "დაინტერესების გამოხატვა",
+      "intro": "თუ დაინტერესებული ხართ ჩვენთან მუშაობით, შეგიძლიათ ნახოთ ჩვენი ვაკანსიები ან დაგვიკავშირდეთ:",
+      "description": "ჩვენ ვეძებთ დაინტერესების გამოხატვას (EoI) მომავალი აკადემიური პერსონალისა და სასწავლო ასისტენტებისგან, რომლებიც ჩაერთვებიან ქუთაისის საერთაშორისო უნივერსიტეტის (KIU) სასწავლო და კვლევით საქმიანობაში. დეტალური ინფორმაციისთვის და დაინტერესების გამოხატვის ფორმის შესავსებად, გთხოვთ",
+      "readGuidelines": "წაიკითხეთ გაიდლაინები აქ",
+      "readyTitle": "მზად ხართ განაცხადისთვის?",
+      "readyDescription": "წარადგინეთ თქვენი დაინტერესების გამოხატვა და შეუერთდით ჩვენს აკადემიურ საზოგადოებას.",
+      "submitButton": "დაინტერესების გამოხატვის წარდგენა"
+    },
+    "cta": {
+      "title": "დაინტერესებული ხართ მომავალი შესაძლებლობებით?",
+      "description": "მიიღეთ განახლებები ახალი ვაკანსიების შესახებ და წარადგინეთ თქვენი დაინტერესების გამოხატვა.",
+      "submitButton": "დაინტერესების გამოხატვის წარდგენა",
+      "contactButton": "დაგვიკავშირდით"
     }
   }
 }
