--- a/i18n/ge.json
+++ b/i18n/ge.json
@@ -11,6 +11,7 @@
     "title": "ჩვენი ფაკულტეტები"
   },
   "navigation": {
+    "home": "მთავარი",
     "about": "KIU-ს შესახებ",
     "programs": "პროგრამები",
     "research": "კვლევა",
@@ -20,6 +21,14 @@
     "news": "სიახლეები",
     "campus": "კამპუსი",
     "vacancies": "ვაკანსიები"
+  },
+  "search": {
+    "placeholder": "გვერდების, სკოლების, სიახლეების ძებნა...",
+    "page": "გვერდი",
+    "school": "სკოლა",
+    "news": "სიახლე",
+    "content": "შინაარსი",
+    "noResults": "შედეგები ვერ მოიძებნა. სცადეთ სხვა საძიებო ფრაზა."
   },
   "footer": {
     "usefulLinks": "სასარგებლო ლინკები",
