--- a/i18n/ge.json
+++ b/i18n/ge.json
@@ -209,7 +209,70 @@
     "globalNetwork": {
       "title": "გლობალური აკადემიური ქსელი",
       "subtitle": "ჩვენი სკოლები ინარჩუნებენ პარტნიორობას წამყვან უნივერსიტეტებთან მსოფლიოს მასშტაბით",
-      "partnerTitle": "პარტნიორი უნივერსიტეტები"
+      "partnerTitle": "პარტნიორი უნივერსიტეტები",
+      "filterAll": "ყველა პარტნიორობა",
+      "filterResearch": "სამეცნიერო თანამშრომლობა",
+      "filterExchange": "სტუდენტთა გაცვლა",
+      "filterStrategic": "სტრატეგიული პარტნიორები",
+      "partners": {
+        "MIT": {
+          "name": "მასაჩუსეტსის ტექნოლოგიური ინსტიტუტი",
+          "field": "კომპიუტერული მეცნიერება და AI",
+          "description": "წამყვანი თანამშრომლობა ხელოვნური ინტელექტისა და მანქანური სწავლის კვლევაში"
+        },
+        "Oxford": {
+          "name": "ოქსფორდის უნივერსიტეტი",
+          "field": "მედიცინა და სიცოცხლის მეცნიერებები",
+          "description": "ერთობლივი სამედიცინო კვლევა და სტუდენტთა გაცვლითი პროგრამები"
+        },
+        "TUM": {
+          "name": "მიუნხენის ტექნიკური უნივერსიტეტი",
+          "field": "არქიტექტურა და ინჟინერია",
+          "description": "სტრატეგიული პარტნიორობა საინჟინრო განათლებასა და ინოვაციაში"
+        },
+        "Sorbonne": {
+          "name": "სორბონის უნივერსიტეტი",
+          "field": "სამართალი და სოციალური მეცნიერებები",
+          "description": "სტუდენტთა გაცვლა და იურიდიული კვლევების თანამშრომლობა"
+        },
+        "UofT": {
+          "name": "ტორონტოს უნივერსიტეტი",
+          "field": "ფსიქოლოგია და ნეირომეცნიერება",
+          "description": "თანამშრომლობითი კვლევა კოგნიტურ მეცნიერებასა და ფსიქოლოგიაში"
+        },
+        "Melbourne": {
+          "name": "მელბურნის უნივერსიტეტი",
+          "field": "გარემოს დაცვის მეცნიერება",
+          "description": "გარემოსდაცვითი კვლევა და მდგრადი განვითარების ინიციატივები"
+        },
+        "Tokyo": {
+          "name": "ტოკიოს უნივერსიტეტი",
+          "field": "რობოტექნიკა და ტექნოლოგია",
+          "description": "მოწინავე რობოტექნიკისა და ტექნოლოგიური კვლევის თანამშრომლობა"
+        },
+        "Shanghai": {
+          "name": "შანხაის ჯიაო ტონგის უნივერსიტეტი",
+          "field": "ინჟინერია და ინოვაცია",
+          "description": "სტრატეგიული პარტნიორობა საინჟინრო ინოვაციასა და კვლევით თანამშრომლობაში"
+        }
+      },
+      "stats": {
+        "partnerUniversities": "პარტნიორი უნივერსიტეტი",
+        "exchangeStudents": "გაცვლითი სტუდენტი",
+        "jointProjects": "ერთობლივი პროექტი",
+        "countries": "ქვეყანა"
+      },
+      "typeLabels": {
+        "research": "კვლევითი",
+        "exchange": "გაცვლითი",
+        "strategic": "სტრატეგიული",
+        "both": "მრავალმხრივი"
+      },
+      "detailLabels": {
+        "students": "სტუდენტები:",
+        "projects": "პროექტები:",
+        "since": "დაწყებიდან:"
+      }
     },
     "choosePath": {
       "title": "აირჩიეთ თქვენი აკადემიური გზა",
